# cram

./: .gitignore  Cargo.toml  README.md  benchmark.json  benchmark.py  evaluate.py
files/: 1KB_RANDOM  1MB_RANDOM
src/: compression.rs  lib.rs  main.rs  packer.rs  types.rs  unpacker.rs
